objects/redwing__Shared_Learning_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shared_Learning_Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Approver_Notes__c</fullName>
        <label>Approver Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shared Learning Assignments</relationshipLabel>
        <relationshipName>Shared_Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Evaluation_Result_Text__c</fullName>
        <formula>TEXT( redwing__Evaluation_Result__c )</formula>
        <label>Evaluation Result Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Evaluation_Result__c</fullName>
        <label>Evaluation Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Evaluation_Score__c</fullName>
        <label>Evaluation Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Evaluation_Times_Taken__c</fullName>
        <label>Evaluation Times Taken</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Last_Published_Learning_Version_Decision__c</fullName>
        <label>Last Published Learning Version Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New version taken</fullName>
                </value>
                <value>
                    <fullName>Keep using old version</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Last_Published_Learning_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Published Learning Version</label>
        <referenceTo>redwing__Learning_Version__c</referenceTo>
        <relationshipLabel>Shared Learning Assignments (Last Published Learning Version)</relationshipLabel>
        <relationshipName>Shared_LP_Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Learning_Assignment_Last_Update__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Assignment Last Update</label>
        <referenceTo>redwing__Learning_Assignment__c</referenceTo>
        <relationshipLabel>Shared Learning Assignments</relationshipLabel>
        <relationshipName>Shared_Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Learning_Version__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Learning Version</label>
        <referenceTo>redwing__Learning_Version__c</referenceTo>
        <relationshipLabel>Shared Learning Assignments</relationshipLabel>
        <relationshipName>Shared_Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Shared Learning Assignments</relationshipLabel>
        <relationshipName>Shared_Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Progress_Percentage__c</fullName>
        <label>Progress %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>redwing__Progress_Text__c</fullName>
        <formula>TEXT( redwing__Progress__c )</formula>
        <label>Progress Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Progress__c</fullName>
        <label>Progress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Task_Rating__c</fullName>
        <label>Task Rating</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__User_Notes__c</fullName>
        <label>User Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>redwing__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shared_Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Shared Learning Assignment</label>
    <listViews>
        <fullName>redwing__All</fullName>
        <columns>NAME</columns>
        <columns>redwing__Contact__c</columns>
        <columns>redwing__User__c</columns>
        <columns>redwing__Learning__c</columns>
        <columns>redwing__Learning_Assignment_Last_Update__c</columns>
        <columns>redwing__Learning_Version__c</columns>
        <columns>redwing__Progress__c</columns>
        <columns>redwing__Progress_Percentage__c</columns>
        <columns>redwing__Last_Published_Learning_Version__c</columns>
        <columns>redwing__Last_Published_Learning_Version_Decision__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SLA-{0000000}</displayFormat>
        <label>Shared Learning Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shared Learning Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>